<package>
  <name>velma_robrex</name>
  <version>1.0.0</version>
  <description>
    This package contains planners implementation for Velma robot.
  </description>
  <author email="dawid.seredynski@gmail.com">Dawid Seredynski</author>
  <maintainer email="dawid.seredynski@gmail.com">Dawid Seredynski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>ocl</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>rtt_rosclock</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>collision_convex_model</build_depend>
  <build_depend>kin_dyn_model</build_depend>
  <build_depend>planer_utils</build_depend>
  <build_depend>ompl</build_depend>
  <build_depend>interactive_markers</build_depend>

  <run_depend>rtt</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>rtt_rosnode</run_depend> 
  <run_depend>rtt_roscomm</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>octomap_msgs</run_depend>
  <run_depend>rtt_sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rtt_std_msgs</run_depend>
  <run_depend>collision_convex_model</run_depend>
  <run_depend>kin_dyn_model</run_depend>
  <run_depend>planer_utils</run_depend>
  <run_depend>ompl</run_depend>
  <run_depend>interactive_markers</run_depend>

</package>
